--- a/notebooks/Connect4.ipynb
+++ b/notebooks/Connect4.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4Project\")"
+    "sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -72,169 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 2 0 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?3\n",
-      "Let's do that\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 0 2 1 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?1\n",
-      "Let's do that\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?2\n",
-      "Let's do that\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 0 2 2 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?1\n",
-      "Let's do that\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0]\n",
-      " [0 2 2 0 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?1\n",
-      "Let's do that\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 1 1 0 0 0]\n",
-      " [0 2 2 0 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 1 1 0 0 0]\n",
-      " [0 2 2 2 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?3\n",
-      "Let's do that\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0]\n",
-      " [0 1 1 1 0 0]\n",
-      " [0 2 2 2 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 1 1 0 0]\n",
-      " [0 2 2 2 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [0 1 2 1 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?0\n",
-      "Let's do that\n",
-      "[[0 0 0 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 1 1 0 0]\n",
-      " [0 2 2 2 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [1 1 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 2 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 1 1 0 0]\n",
-      " [0 2 2 2 0 0]\n",
-      " [0 1 2 2 0 0]\n",
-      " [1 1 2 1 0 0]]\n",
-      "Turn 1\n",
-      "In which column do you want to insert your token ?0\n",
-      "Let's do that\n",
-      "[[0 0 2 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 1 1 0 0]\n",
-      " [0 2 2 2 0 0]\n",
-      " [1 1 2 2 0 0]\n",
-      " [1 1 2 1 0 0]]\n",
-      "Turn 2\n",
-      "[[0 0 2 0 0 0]\n",
-      " [0 0 2 0 0 0]\n",
-      " [0 1 1 1 0 0]\n",
-      " [2 2 2 2 0 0]\n",
-      " [1 1 2 2 0 0]\n",
-      " [1 1 2 1 0 0]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fight(\"flat_mc\", \"manual_move\", nb_playouts=4000)"
    ]
