add contests and ucb

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -22,8 +22,15 @@
    "source": [
     "from src.game.board import Board\n",
     "from src.game.fight import fight\n",
-    "from src.common.constants import * \n",
-    "import numpy as np"
+    "from src.game.contest import contest\n",
+    "from src.common.constants import * "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Playout"
    ]
   },
   {
@@ -49,6 +56,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Flat MC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "board = Board()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -71,6 +96,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UCB "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "board = Board()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -78,7 +121,29 @@
    },
    "outputs": [],
    "source": [
-    "fight(\"flat_mc\", \"manual_move\", nb_playouts=4000)"
+    "move = board.ucb()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "move.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
