--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -136,6 +136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UCB vs FlatMC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
