add_random_player

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -99,6 +99,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Random vs Flat MC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"flat_mc\", \"random_move\", nb_fights=100, nb_playouts=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### UCB "
    ]
   },
