--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -81,6 +81,7 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "move = board.flat_mc()"
    ]
   },
@@ -139,6 +140,7 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "move = board.ucb()"
    ]
   },
@@ -169,6 +171,67 @@
    "outputs": [],
    "source": [
     "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### UCT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "board = Board()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "move = board.uct_search()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "move.render()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UCT vs FlatMC (à remplacer par UCB quand il marchera)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"flat_mc\", \"uct_search\", nb_fights=20, nb_playouts=100)"
    ]
   },
   {
