Add tests and contest for UCB bis

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -2,22 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")"
+    "#sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
+    "sys.path.insert(0, \"/Users/alopez/Connect4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
@@ -35,10 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "board = Board()"
@@ -46,11 +41,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 2 1 0 0]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 2 1 0 0]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 2 0 0 0]\n",
+      " [1 0 0 2 1 0 0]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 2 1 0 0]\n",
+      " [1 0 0 2 1 0 0]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 0 0 2 1 0 0]\n",
+      " [1 0 0 2 1 0 0]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 0 0 2 1 0 0]\n",
+      " [1 0 0 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 0 0 2 1 0 0]\n",
+      " [1 0 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 0 1 2 1 0 0]\n",
+      " [1 0 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 2 0 0]\n",
+      " [2 0 1 2 1 0 0]\n",
+      " [1 0 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 2 0 0]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 0 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 2 0 0]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 2 0 1]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 0 0 0 2 0 1]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 0 1 0 2 0 1]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [2 0 0 0 0 0 0]\n",
+      " [2 0 1 0 2 0 1]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [2 0 0 0 0 0 0]\n",
+      " [2 0 1 0 2 0 1]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[2 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [2 0 0 0 0 0 0]\n",
+      " [2 0 1 0 2 0 1]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[2 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [2 0 0 0 0 0 0]\n",
+      " [2 0 1 1 2 0 1]\n",
+      " [2 0 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[2 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [2 0 0 0 0 0 0]\n",
+      " [2 0 1 1 2 0 1]\n",
+      " [2 2 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n",
+      "-------------\n",
+      "[[2 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [2 0 0 0 0 0 1]\n",
+      " [2 0 1 1 2 0 1]\n",
+      " [2 2 1 2 1 0 1]\n",
+      " [1 2 2 2 1 0 1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "board.playout(verbose=True)"
    ]
@@ -64,10 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "board = Board()"
@@ -75,11 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.01 s, sys: 22 ms, total: 1.03 s\n",
+      "Wall time: 1.03 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "move = board.flat_mc()"
@@ -87,11 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color : 1, column: 3.\n"
+     ]
+    }
+   ],
    "source": [
     "move.render()"
    ]
@@ -106,9 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "contest(\"flat_mc\", \"random_move\", nb_fights=100, nb_playouts=500)"
@@ -135,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -147,9 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "move.render()"
@@ -164,13 +326,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [01:58<00:00,  1.19s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.4, 'ucb': 0.6, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=500)"
+    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UCB_bis vs FlatMC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [01:57<00:00,  1.18s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.38, 'ucb_bis': 0.62, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest(\"flat_mc\", \"ucb_bis\", nb_fights=100, nb_playouts=100)"
    ]
   },
   {
@@ -196,9 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -208,9 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "move.render()"
@@ -226,9 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "contest(\"flat_mc\", \"uct_search\", nb_fights=20, nb_playouts=100)"
@@ -260,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
