Adapted for RAVE (unclean)

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
     "from src.game.fight import fight\n",
-    "from src.game.contest import contest\n",
+    "from src.game.contest import contest, contest_bis\n",
     "from src.common.constants import * "
    ]
   },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,173 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 1 0 0]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 2 1 0 0]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [1 0 0 2 1 0 0]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 2 0 0 0]\n",
-      " [1 0 0 2 1 0 0]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 2 1 0 0]\n",
-      " [1 0 0 2 1 0 0]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [2 0 0 2 1 0 0]\n",
-      " [1 0 0 2 1 0 0]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [2 0 0 2 1 0 0]\n",
-      " [1 0 0 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [2 0 0 2 1 0 0]\n",
-      " [1 0 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [2 0 1 2 1 0 0]\n",
-      " [1 0 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 2 0 0]\n",
-      " [2 0 1 2 1 0 0]\n",
-      " [1 0 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 2 0 0]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 0 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 2 0 0]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 2 0 1]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [2 0 0 0 2 0 1]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [2 0 1 0 2 0 1]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [2 0 0 0 0 0 0]\n",
-      " [2 0 1 0 2 0 1]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0]\n",
-      " [2 0 0 0 0 0 0]\n",
-      " [2 0 1 0 2 0 1]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[2 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0]\n",
-      " [2 0 0 0 0 0 0]\n",
-      " [2 0 1 0 2 0 1]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[2 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0]\n",
-      " [2 0 0 0 0 0 0]\n",
-      " [2 0 1 1 2 0 1]\n",
-      " [2 0 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[2 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0]\n",
-      " [2 0 0 0 0 0 0]\n",
-      " [2 0 1 1 2 0 1]\n",
-      " [2 2 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n",
-      "-------------\n",
-      "[[2 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0]\n",
-      " [2 0 0 0 0 0 1]\n",
-      " [2 0 1 1 2 0 1]\n",
-      " [2 2 1 2 1 0 1]\n",
-      " [1 2 2 2 1 0 1]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "board.playout(verbose=True)"
    ]
@@ -221,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,18 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.01 s, sys: 22 ms, total: 1.03 s\n",
-      "Wall time: 1.03 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "move = board.flat_mc()"
@@ -249,17 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "color : 1, column: 3.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "move.render()"
    ]
@@ -277,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"random_move\", nb_fights=100, nb_playouts=500)"
+    "contest(\"flat_mc\", \"random_move\", nb_fights=10, nb_playouts=500)"
    ]
   },
   {
@@ -290,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "board = Board()"
@@ -326,29 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [01:58<00:00,  1.19s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'flat_mc': 0.4, 'ucb': 0.6, 'tie': 0.0}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=100)"
+    "contest(\"flat_mc\", \"ucb\", nb_fights=10, nb_playouts=100)"
    ]
   },
   {
@@ -360,29 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [01:57<00:00,  1.18s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'flat_mc': 0.38, 'ucb_bis': 0.62, 'tie': 0.0}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"ucb_bis\", nb_fights=100, nb_playouts=100)"
+    "contest(\"flat_mc\", \"ucb_bis\", nb_fights=10, nb_playouts=100)"
    ]
   },
   {
@@ -397,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "board = Board()"
@@ -437,17 +216,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"uct_search\", nb_fights=20, nb_playouts=100)"
+    "contest(\"flat_mc\", \"uct_search\", nb_fights=10, nb_playouts=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### RAVE vs FLAT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:07<00:00,  1.39it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rave_search': 0.9, 'flat_mc': 0.1, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest_bis(\"rave_search\", \"flat_mc\", nb_fights=10, nb_playouts=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RAVE vs UCT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:25<00:00,  2.56s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rave_search': 0.7, 'uct_search': 0.3, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest_bis(\"rave_search\", \"uct_search\", nb_fights=10, nb_playouts=50)"
+   ]
   }
  ],
  "metadata": {
